refactor: melhora legibilidade e entendimento do codigo